# mcp_memory

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CONTINUITY.md  README.md  note.md  package.json  pnpm-lock.yaml  render.yaml
apps/mcp-api/: Dockerfile  README.md  pyproject.toml
apps/mcp-api/migrations/: 001_init.sql  002_runtime_indexes.sql  003_control_plane_ownership_and_indexes.sql  004_webhooks.sql  005_exports.sql  006_episode_object_storage.sql  007_audit_logs_pagination_index.sql  008_billing_entities.sql  009_audit_logs_latency_and_filters.sql  010_projects_isolation_mode_falkordb.sql  011_code_index_async_postgres.sql  012_operations_and_index_bundles.sql  013_working_memory.sql  014_canonical_memory_v3.sql  015_code_index_repo_source_v3.sql  016_pin_memory_salience.sql  017_entity_resolution_foundation.sql  018_unresolved_mentions_identity.sql
apps/mcp-api/scripts/: claim_legacy_projects.py  create_dev_project_and_token.py  index_workspace_bundle.py  smoke_deployed_mcp.py
apps/mcp-api/tests/: conftest.py  test_app_asgi_transport.py  test_auth.py  test_code_index.py  test_control_plane_api.py  test_control_plane_auth.py  test_dependency_policy.py  test_deployed_smoke_profiles.py  test_episodes_repository.py  test_falkordb_adapter.py  test_falkordb_admin.py  test_graphiti_adapter.py  test_graphiti_clients.py  test_mcp_graph.py  test_mcp_indexing.py  test_mcp_memory.py  test_mcp_runtime_modes.py  test_mcp_tools.py  test_mcp_transport.py  test_mcp_validation_matrix.py  test_neo4j_adapter.py  test_redis_runtime.py  (+4 more)
(+302 files in other folders)
