[project]
name = "viberecall-mcp"
version = "0.1.0"
description = "VibeRecall MCP backend bootstrap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg==0.31.0",
  "boto3==1.42.58",
  "celery==5.5.3",
  "fastapi==0.134.0",
  "fastmcp==3.0.2",
  "graphiti-core==0.28.1",
  "falkordb>=1.1.2,<2.0.0",
  "httpx==0.28.1",
  "jsonschema==4.26.0",
  "prometheus-client>=0.24.1",
  "pydantic-settings==2.13.1",
  "redis==6.4.0",
  "sqlalchemy==2.0.47",
  "structlog==25.5.0",
  "uvicorn==0.41.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viberecall_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
graphiti-core = { path = "vendor/graphiti", editable = true }
